[package]
name = "rustflags"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "Parser for CARGO_ENCODED_RUSTFLAGS"
repository = "https://github.com/dtolnay/rustflags"
documentation = "https://docs.rs/rustflags"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
