[package]
name = "rustflags"
version = "0.1.7"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::build-utils"]
description = "Parser for CARGO_ENCODED_RUSTFLAGS"
documentation = "https://docs.rs/rustflags"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/rustflags"
rust-version = "1.74"

[dev-dependencies]
cmake = "0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
